--- a/config/sway/config
+++ b/config/sway/config
@@ -219,7 +219,7 @@ bar {
     statusline #839496
     focused_workspace #fdf6e3 #268bd2 #fdf6e3
     active_workspace #fdf6e3 #6c71c4 #fdf6e3
-    inactive_workspace #002b36 #93a1a1 #002b36
+    inactive_workspace #002b36 #002b36 #268db2
     urgent_workspace #d33682 #d33682 #fdf6e3
   }
 }
